# hyperjson

./: .gitignore  .travis.yml  Cargo.toml  Makefile  Pipfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-test.txt  setup.cfg  setup.py  test.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
benchmark/: benchmark.py
benchmarks/: benchmark_ujson.py  conftest.py  dict_string_int_plain.txt  histogram.py  test_benchmark.py
ci/: before_deploy.sh  install.sh  script.sh
hyperjson/: __init__.py
package/hyperjson/: __init__.py
profiling/: .gitignore  Cargo.toml
profiling/src/: main.rs
profiling/src/profiles/: booleans.rs  dict_string_int_plain.rs  mod.rs
src/: bench.rs  error.rs  lib.rs
tests/: test_docs.py  test_dump.py  test_dumps.py  test_hypothesis.py  test_load.py  test_loads.py  test_official_json.py  test_ujson.py
tests/cpython/: __init__.py  __main__.py  test_decode.py  test_default.py  test_dump.py  test_encode_basestring_ascii.py  test_enum.py  test_fail.py  test_float.py  test_indent.py  test_pass1.py  test_pass2.py  test_pass3.py  test_recursion.py  test_scanstring.py  test_separators.py  test_speedups.py  test_unicode.py
