[package]
name = "hyperjson"
version = "0.2.1"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]

[dependencies]
serde_json = "1.0.40"
failure = "0.1.5"
serde = "1.0.101"
serde_derive = "1.0.101"

[dependencies.pyo3]
version = "0.8.0"

[lib]
name = "hyperjson"
crate-type = ["rlib", "cdylib"]

[features]
# We must make this feature optional to build binaries such as the profiling crate
default = ["pyo3/extension-module"]

[workspace]
members = [ "profiling" ]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
