[tool.poetry]
name = "hyperjson"
version = "0.2.4"
description = "A hyper-fast Python module for reading/writing JSON data"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mre/hyperjson"
keywords = ["json", "parser", "fast"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pylint = "^1.9"
flake8 = "^3.5"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "*"
simplejson = "*"
ujson = "*"
yajl = "*"
orjson = { version = "*", markers = "python_version < '3.8'" }
python-rapidjson = "*"
hypothesis = "*"
autopep8 = "*"
maturin = "==0.7.7"
